import java.awt.Graphics;

interface Drawable {
    void draw(Graphics g);
}
