@startuml bouncing_ball
!define DARKBLUE
!includeurl https://raw.githubusercontent.com/Drakemor/RedDress-PlantUML/master/style.puml

abstract Entity extends Position
{
    -vx: double
    -vy: double
    +Entity()
    +getSpeed(): double[]
    +setSpeed(double vx, double vy): void
    +update(double dt): void
}

abstract Position
{
    -x: double
    -y: double
    +Position()
    +getPosition(): double[]
    +setPosition(double x, double y): void
}

class Ball extends Drawable, Entity {
    -radius: double
    -color: Color
    +Ball(double radius, Color color)
}

interface Drawable
{
    +draw(Graphics g): void
}

class BouncingBall extends Ball {
    +BouncingBall()
    +bounce(BouncingBall other)
    +bounce(Box window)   
}

class World extends JPanel {
    -box: Box
    -balls: ArrayList<BouncingBall>
    +World()
    +runGame()
    +updateGame()
}

World *-- BouncingBall
World *-- Box

class World.DrawCanvas extends JPanel {
    +printComponents()
    +getPreferredSize()
}

World.DrawCanvas --* World

class Box extends Drawable {
    +minX, minY, maxX, maxY
    +Box(int x, int y, int width, int height)
    +set(int x, int y, int width, int height)
}

@enduml